added client and server data for videos room tansmission
